2006-08-03  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome-utils/dialog-reset-warnings.c:
	* src/gnome/schemas/apps_gnucash_warnings.schemas.in: Add tooltips
	  to the checkboxes in the Reset Warnings dialog showing the long
	  descriptions. Remove all linebreaks in these strings to make
	  them look better.

2006-08-02  David Hampton  <hampton@employees.org>

	* various: Remove the majority of the remaining deprecated widgets
	by collapsing the "deprecated-cleanup" branch (r13935:14581) back
	into trunk.  This patch also creates a new file for the code that
	requires a GtkEntry text to match one of its completions.

2006-07-31  Derek Atkins  <derek@ihtfp.com>

	* src/bin/gnucash-bin.c:
	  Adjust the "development version" message for the 2.0.1 release.

2006-07-30  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome/window-reconcile.c: Replace the hbox separating debits
	  from credits in the reconciliation window by a homogeneous
	  table. This avoids nasty redraws when one of them changes in
	  size. Fixes #342512.

	* src/gnome/schemas/apps_gnucash_warnings.schemas.in:
	* src/gnome-utils/gnc-main-window.c: Add warning close_last_window
	  and show it when user tries to close the last GnuCash window.
	  Fixes #338865.

	* src/gnome-utils/gnc-gnome-utils.c:
	* src/gnome-utils/glade/preferences.glade:
	* src/gnome/schemas/apps_gnucash_general.schemas.in: Add new
	  setting general/show_splash_screen to
	  preferences_dialog->General and only show the splash screen if
	  it is TRUE. Fixes 339876.

	* src/gnome/gnc-plugin-page-account-tree.c:
	* src/gnome/gnc-plugin-page-register.c:
	* src/gnome/gnc-plugin-basic-commands.c:
	* src/gnome-utils/glade/preferences.glade: Fixed some duplicate
	  accelerators.

	* src/gnome-utils/gnc-main-window.c:
	* src/gnome/schemas/apps_gnucash_general.schemas.in:
	* src/gnome-utils/glade/preferences.glade: Add preference
	  general/tab_position to choose the edge of the notebook the tabs