@@ -1,3 +1,8 @@
+2006-08-05  Andreas Köhler  <andi5.py@gmx.net>
+
+	* src/core-utils/gnc-gtk-utils.c: Unref entry completion.
+	* src/gnome-utils/dialog-account.c: I18n "Type", unref store.
+
 2006-08-03  Andreas Köhler  <andi5.py@gmx.net>
 
 	* src/gnome-utils/dialog-reset-warnings.c:
